# NoveOs

./: .env.example  .gitignore  LICENSE  MIGRATION.md  OPTIMIZATION_REPORT.md  PRODUCT.md  README.md  REFACTOR-PLAN.md  generate_pdf.py  generate_pdf_v2.py  requirements.txt  start-deepseek-proxy.bat  start-deepseek-proxy.sh  start_auto_write.bat
novel-os/: README.md  book.yaml  cli.py  fanqie_course_overrides.yaml  import_chapters.py  init_book.py  launch.bat  pyproject.toml  rule_overrides.json  run_outer_loop_test.py  run_path_c.py  test_deepseek_integration.py  test_phase2_prompts.py
novel-os/api/: __init__.py  main.py
novel-os/config/: fanqie_course_rules.yaml  genres.json
novel-os/core/: __init__.py  anti_detect_reviser.py  batch_writer.py  chapter_validator.py  chapter_validator.py.bak  circuit_breaker.py  config_loader.py  event_bus.py  fanqie_course.py  fts_index.py  guard_registry_init.py  input_governor.py  insight_service.py  iwr_analyzer.py  lexicon_injector.py  llm_client.py  llm_settings_client.py  orchestrator.py  outer_crew_runner.py  platform_scorer.py  post_write_validator.py  project_factory.py  prompt_builder.py  quality_gates.py  snapshot_manager.py  state_manager.py  statistical_fingerprint_optimizer.py  style_retriever.py
novel-os/docs/: Novel-OS_v2_前置约束重构方案.md  deai_optimization_plan.md
novel-os/frontend/: audit-flows.mjs  audit-pages.mjs  audit-runtime-results.json  audit-runtime.mjs  eslint.config.js  index.html  package-lock.json  package.json  screenshot-home.cjs  screenshot-projects.cjs  screenshot.cjs  tsconfig.app.json  (+2 more)
(+662 files in other folders)
