[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "novel-os"
version = "1.0.0"
description = "Novel-OS: 多类型、多项目的 AI 长篇小说写作系统"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Novel-OS Team"},
]
dependencies = [
    "pyyaml>=6.0",
    "litellm>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
